--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/*** Navbar ***/
+
 nav {
     background-image: url("../img/background_art_anime.jpg");
     background-size: cover;
@@ -23,6 +25,14 @@ nav {
     color: #fff;
 }
 
+.menu li a:hover {
+    color: gold;
+}
+
+.menu li:hover {
+    animation: shake_vertical 0.5s;
+}
+
 .centered-content {
     display: flex;
     justify-content: center;
@@ -45,6 +55,11 @@ h1 {
 .content-outline h1 {
     font-size: 28px;
 }
+
+/*** Navbar ***/
+
+
+/*** Image Profile ***/
 
 .circle-image {
     position: relative;
@@ -74,6 +89,11 @@ h1 {
     border: 3px solid #fff;
 }
 
+/*** Image Profile ***/
+
+
+/*** About Section ***/
+
 .about-section {
     text-align: center;
     margin-top: 20px;
@@ -88,6 +108,11 @@ h1 {
     font-size: 16px;
     line-height: 1;
 }
+
+/*** About Section ***/
+
+
+/*** Works Section ***/
 
 .works-section {
     background-color: #f2f2f2;
@@ -108,6 +133,10 @@ h1 {
     object-fit: cover;
 }
 
+.work-item img:hover {
+    animation: pulse 0.5s;
+}
+
 .work-item h4 {
     margin-top: 10px;
     margin-bottom: 10px;
@@ -116,6 +145,11 @@ h1 {
 .work-item p {
     margin: 5px 0;
 }
+
+/*** Works Section ***/
+
+
+/*** Contact Section ***/
 
 .contact-section {
     margin-top: 20px;
@@ -164,7 +198,13 @@ h1 {
 
 .contact-section .form-row button:hover {
     background-color: darkblue;
+    animation: bounce 1s;
 }
+
+/*** Contact Section ***/
+
+
+/*** Footer Section ***/
 
 footer {
     background-color: black;
@@ -188,6 +228,99 @@ footer {
     text-decoration: none;
 }
 
-.social-icons a:hover {
+.social-icons a:hover i {
     color: blue;
+    animation: shake_horizontal 0.5s;
 }
+
+/*** Footer Section ***/
+
+
+/*** Animations ***/
+
+@keyframes shake_vertical {
+    0% {
+        transform: translateY(0);
+    }
+
+    25% {
+        transform: translateY(-5px);
+    }
+
+    50% {
+        transform: translateY(5px);
+    }
+
+    75% {
+        transform: translateY(-5px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@keyframes shake_horizontal {
+    0% {
+        transform: translateX(0);
+    }
+
+    25% {
+        transform: translateX(-5px);
+    }
+
+    50% {
+        transform: translateX(5px);
+    }
+
+    75% {
+        transform: translateX(-5px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes bounce {
+
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(0);
+    }
+
+    40% {
+        transform: translateY(-20px);
+    }
+
+    60% {
+        transform: translateY(-10px);
+    }
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+
+    25% {
+        transform: scale(1.05);
+    }
+
+    50% {
+        transform: scale(1);
+    }
+
+    75% {
+        transform: scale(1.05);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+/*** Animations ***/
