--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,11 @@ nav {
 }
 
 .menu li a:hover {
-    color: gold;
+    color: red;
 }
 
 .menu li:hover {
-    animation: shake_vertical 0.5s;
+    animation: pulse-border 2s infinite;
 }
 
 .centered-content {
@@ -38,6 +38,11 @@ nav {
     justify-content: center;
     align-items: center;
     height: 320px;
+}
+
+.centered-content div:hover {
+    color: red;
+    outline: 1px solid red;
 }
 
 .content-outline {
@@ -87,6 +92,10 @@ h1 {
     object-fit: cover;
     border-radius: 50%;
     border: 3px solid #fff;
+}
+
+.circle-image img:hover {
+    animation: glow 3s infinite;
 }
 
 /*** Image Profile ***/
@@ -238,28 +247,6 @@ footer {
 
 /*** Animations ***/
 
-@keyframes shake_vertical {
-    0% {
-        transform: translateY(0);
-    }
-
-    25% {
-        transform: translateY(-5px);
-    }
-
-    50% {
-        transform: translateY(5px);
-    }
-
-    75% {
-        transform: translateY(-5px);
-    }
-
-    100% {
-        transform: translateY(0);
-    }
-}
-
 @keyframes shake_horizontal {
     0% {
         transform: translateX(0);
@@ -322,5 +309,38 @@ footer {
         transform: scale(1);
     }
 }
+
+@keyframes glow {
+    0% {
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.5);
+    }
+
+    50% {
+        box-shadow: 0 0 20px 10px rgba(255, 255, 255, 0.7);
+    }
+
+    100% {
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.5);
+    }
+}
+
+@keyframes pulse-border {
+    0% {
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.5);
+    }
+
+    50% {
+        box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.3);
+    }
+
+    100% {
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.5);
+    }
+}
+
+.element {
+    animation: pulse-border 2s infinite;
+}
+
 
 /*** Animations ***/
