--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,33 @@ h1 {
 
 /*** Works Section ***/
 
+/***  Video Section ***/
+
+.video-container {
+    position: relative;
+    /* Establecer un ancho máximo para el contenedor */
+    max-width: 720px;
+    max-height: 480px;
+    /* Proporción 16:9 para un video de YouTube */
+    padding-bottom: 56.25%;
+    /* Centrar horizontalmente el contenedor */
+    margin: 0 auto;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* Establecer el ancho al 100% */
+    width: 100%;
+    /* Ajustar la altura al 100% */
+    height: 100%;
+}
+
+
+/***  Video Section ***/
+
+
 
 /*** Contact Section ***/
 
@@ -291,6 +318,8 @@ h1 {
     background-color: blue;
     /* Color del texto del botón */
     color: white;
+    /* Sombra alrededor del botón */
+    box-shadow: 0 0 25px blue;
     /* Espacio interno del botón */
     padding: 10px 30px;
     /* Eliminar borde */
@@ -301,9 +330,13 @@ h1 {
 
 .contact-section .form-row button:hover {
     /* Cambio de color de fondo al hacer hover en el botón */
-    background-color: darkblue;
-    /* Efecto de bounce al hacer hover en el botón */
-    animation: bounce 1s;
+    background-color: blue;
+    /* Efecto de sombra al hacer hover en el botón */
+    box-shadow: 0 0 5px blue,
+        0 0 15px blue,
+        0 0 30px blue,
+        0 0 45px blue;
+
 }
 
 /*** Contact Section ***/
@@ -475,6 +508,8 @@ footer {
         /* Ajustar el ancho del textarea */
         width: 300px;
     }
+
+
 }
 
 /*** Media queries ***/
