--- a/css/style.css
+++ b/css/style.css
@@ -230,32 +230,29 @@ h1 {
 
 /*** Works Section ***/
 
+
 /***  Video Section ***/
 
 .video-container {
     position: relative;
     /* Establecer un ancho máximo para el contenedor */
-    max-width: 720px;
-    max-height: 480px;
+    max-width: 100%;
     /* Proporción 16:9 para un video de YouTube */
-    padding-bottom: 56.25%;
-    /* Centrar horizontalmente el contenedor */
+    padding: 25px 0 15px 0;
+    /* Centrar horizontalmente y verticalmente el contenedor */
     margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .video-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    /* Establecer el ancho al 100% */
-    width: 100%;
-    /* Ajustar la altura al 100% */
-    height: 100%;
+    /* Establecer el ancho y la altura */
+    width: 640px;
+    height: 360px;
 }
 
-
 /***  Video Section ***/
-
 
 
 /*** Contact Section ***/
